# Katha

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: Workflow.yml
parsers/: Cargo.toml  README.md
parsers/src/: error.rs  lib.rs
parsers/src/docx/: mod.rs  parse.rs
parsers/src/epub/: mod.rs  parse.rs
parsers/src/pdf/: mod.rs  parse.rs
parsers/tests/: docx_parser.rs  parser_behaviors.rs
src/: error_codes.rs  main.rs
tests/: cli.rs
