[package]
name = "katha-parsers"
version = "0.1.0"
edition = "2024"
description = "Parser adapters for EPUB, DOCX, and PDF document ingestion."
authors = ["krishnadubagunta"]

[lib]
name = "katha_parsers"
path = "src/lib.rs"

[dependencies]
epub = "2.1.5"
serde = { version = "1.0.219", features = ["derive"] }
html2md = "0.2.15"
base64 = "0.21"
quick-xml = "0.38.1"
zip = "0.6.6"
regex = "1.11.1"
pdf-extract = "0.7.8"
