[package]
name = "katha-parsers"
version = "0.2.0"
edition = "2024"
description = "Parser adapters for EPUB, DOCX, and PDF document ingestion."
license = "MIT"
authors = ["krishnadubagunta"]

[lib]
name = "katha_parsers"
path = "src/lib.rs"

[dependencies]
epub = "2.1.5"
serde = { version = "1.0.219", features = ["derive"] }
base64 = "0.21"
quick-xml = "0.38.1"
zip = "0.6.6"
regex = "1.11.1"
pdf-extract = "0.7.8"
kuchiki = "0.8.1"

[dev-dependencies]
serde_json = "1.0.140"
